@@ -67,19 +67,23 @@ open_xfce()
 
 open_generic()
 {
-    # should rather iterate over all entries in BROWSER
-    browser=`echo "$BROWSER" | cut -d ':' -f 1`
+    IFS=":"
+    for browser in $BROWSER; do
+        if [ x"$browser" != x"" ]; then
 
-    if [ x"$browser" = x"" ]; then exit 2;
-    fi
+            browser_with_arg=`echo "$browser" | sed s#%s#"$1"#`
 
-    browser_with_arg=`echo "$browser" | sed s#%s#"$1"#`
+            if [ x"$browser_with_arg" = x"$browser" ]; then "$browser" "$1";
+            else $browser_with_arg;
+            fi
 
-    if [ x"$browser_with_arg" = x"$browser" ]; then "$browser" "$1";
-    else $browser_with_arg;
-    fi
+            if [ $? -eq 0 ]; then exit 0;
+            fi
+        fi
+    done
 
-    exit 0
+    echo Sorry, no method available for opening "$1"
+    exit 2
 }
 
 [ x"$1" != x"" ] || usage
@@ -90,6 +94,88 @@ open_generic()
 #----------------------------------------------------------------------------
 #   Common utility functions included in all XDG wrapper scripts
 #----------------------------------------------------------------------------
+
+#-------------------------------------------------------------
+# Exit script on successfully completing the desired operation
+
+exit_success()
+{
+    if [ $# -gt 0 ]; then
+        echo "$@"
+        echo
+    fi
+
+    exit 0
+}
+
+
+#-----------------------------------------
+# Exit script on wrong number of arguments
+# prints usage information
+
+exit_failure_arg_count()
+{
+    if [ $# -gt 0 ]; then
+        echo "$@"
+        echo
+    fi
+
+    usage
+
+    exit 1
+}
+
+
+#-----------------------------------
+# Exit script on malformed arguments
+# prints usage information
+
+exit_failure_arg_malformed()
+{
+    if [ $# -gt 0 ]; then
+        echo "$@"
+        echo
+    fi
+
+    usage
+
+    exit 2
+}
+
+#-------------------------------------------------------------
+# Exit script on failure to locate necessary tool applications
+
+exit_failure_operation_impossible()
+{
+    if [ $# -gt 0 ]; then
+        echo "$@"
+        echo
+    fi
+
+    usage
+
+    exit 3
+}
+
+#-------------------------------------------------------------
+# Exit script on failure returned by a tool application
+
+exit_failure_operation_failed()
+{
+    if [ $# -gt 0 ]; then
+        echo "$@"
+        echo
+    fi
+
+    usage
+
+    exit 4
+}
+
+#--------------------------------------
+# Checks for known desktop environments
+# set variable DE to the desktop environments name, lowercase
+
 detectDE()
 {
     if [ x"$KDE_FULL_SESSION" = x"true" ]; then DE=kde;
@@ -105,9 +191,11 @@ detectDE
 
 
 if [ x"$DE" = x"" ]; then
-    if [ x"$BROWSER" != x"" ]; then
-        DE=generic
+    # if BROWSER variable is not set, check some well known browsers instead
+    if [ x"$BROWSER" = x"" ]; then
+        BROWSER=firefox:mozilla:netscape
     fi
+    DE=generic
 fi
 
 case "$DE" in
