@@ -43,19 +43,23 @@ open_xfce()
 
 open_generic()
 {
-    # should rather iterate over all entries in BROWSER
-    browser=`echo "$BROWSER" | cut -d ':' -f 1`
+    IFS=":"
+    for browser in $BROWSER; do
+        if [ x"$browser" != x"" ]; then
 
-    if [ x"$browser" = x"" ]; then exit 2;
-    fi
+            browser_with_arg=`echo "$browser" | sed s#%s#"$1"#`
 
-    browser_with_arg=`echo "$browser" | sed s#%s#"$1"#`
+            if [ x"$browser_with_arg" = x"$browser" ]; then "$browser" "$1";
+            else $browser_with_arg;
+            fi
 
-    if [ x"$browser_with_arg" = x"$browser" ]; then "$browser" "$1";
-    else $browser_with_arg;
-    fi
+            if [ $? -eq 0 ]; then exit 0;
+            fi
+        fi
+    done
 
-    exit 0
+    echo Sorry, no method available for opening "$1"
+    exit 2
 }
 
 [ x"$1" != x"" ] || usage
@@ -64,9 +68,11 @@ open_generic()
 #@xdg-utils-common@
 
 if [ x"$DE" = x"" ]; then
-    if [ x"$BROWSER" != x"" ]; then
-        DE=generic
+    # if BROWSER variable is not set, check some well known browsers instead
+    if [ x"$BROWSER" = x"" ]; then
+        BROWSER=firefox:mozilla:netscape
     fi
+    DE=generic
 fi
 
 case "$DE" in
